--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,8 +1,11 @@
 body {
   background-color: grey;
+}
 
-  .logo {
-    width: 200px;
-    height: 200px;
-  }
+.App {
+  padding: 50px;
+}
+
+a {
+  margin-left: 100px;
 }
