--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -9,3 +9,16 @@ body {
 a {
   margin-left: 100px;
 }
+
+.Links {
+  border: 1px solid;
+  text-align: center;
+  height: 200px;
+  margin-top: 20px;
+}
+
+.header {
+  text-align: center;
+  border: 2px solid black;
+  padding: 10px;
+}
